--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
     <link rel="stylesheet" href="css/font.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
+
 <body>
     <div class="promo">
         <div class="container">
@@ -21,7 +23,7 @@
                     <span>Garmin, Polar, Suunto</span>
                 </div>
                 <div class="header__contacts">
-                    <a href="tel:+74999228974" class="header__phone">+7 (499) 922-89-74</a>
+                    <!-- <a href="tel:+74999228974" class="header__phone">+7 (499) 922-89-74</a> -->
                     <button class="button">заказать звонок</button>
                 </div>
             </header>
@@ -54,7 +56,7 @@
                     <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
                 </div>
             </div>
-            
+
         </div>
     </div>
 
@@ -68,7 +70,7 @@
                         Делимся опытом
                     </div>
                     <div class="advantages__descr">
-                        Наши сотрудники всегда готовы поделиться своим опытом, 
+                        Наши сотрудники всегда готовы поделиться своим опытом,
                         так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!
                     </div>
                 </div>
@@ -78,8 +80,8 @@
                         Заботимся о здоровье
                     </div>
                     <div class="advantages__descr">
-                        Мы работаем для того, 
-                        чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!           
+                        Мы работаем для того,
+                        чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!
                     </div>
                 </div>
                 <div class="advantages__item">
@@ -88,9 +90,9 @@
                         Учим бегать
                     </div>
                     <div class="advantages__descr">
-                        Помогаем с обучением 
+                        Помогаем с обучением
                         правильной технике бега!<br>
-                        Дружим с крупнейшей школой бега в России - 
+                        Дружим с крупнейшей школой бега в России -
                         <a href="#">I LOVE RUNNING.</a>
                     </div>
                 </div>
@@ -98,4 +100,5 @@
         </div>
     </div>
 </body>
+
 </html>
