--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
                     <span>Garmin, Polar, Suunto</span>
                 </div>
                 <div class="header__contacts">
-                    <!-- <a href="tel:+74999228974" class="header__phone">+7 (499) 922-89-74</a> -->
+                    <a href="tel:+74999228974" class="header__phone">+7 (499) 922-89-74</a>
                     <button class="button">заказать звонок</button>
                 </div>
             </header>
