--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <div class="promo">
         <div class="container">
             <header class="header">
-                <a href="#" class="header__logo">
+                <a href="" class="header__logo">
                     <img src="icons/logo.png" alt="logo">
                 </a>
                 <div class="header__official">
@@ -27,7 +27,6 @@
                     <button class="button">заказать звонок</button>
                 </div>
             </header>
-
             <div class="promo__wrapper">
                 <h1 class="promo__header">Подбор пульсометра</h1>
                 <h2 class="promo__subheader">с учётом Вашего уровня подготовки</h2>
@@ -37,12 +36,15 @@
                         <img src="icons/main_screen/timer.png" alt="timer">
                         Время подбора:
                         10 минут
+                        <!-- oskal -->
                     </div>
+
                     <div class="promo__icon">
-                        <img src="icons/main_screen/hand-cart.png" alt="hand-cart">
+                        <img src="icons/main_screen/hand-cart.png" alt="cart">
                         Бесплатная
                         доставка
                     </div>
+
                     <div class="promo__icon">
                         <img src="icons/main_screen/messages.png" alt="messages">
                         Ответим
@@ -53,48 +55,7 @@
                 <button class="button button_main">заказать кОНСУЛЬТАЦИЮ</button>
                 <div class="promo__link">
                     или
-                    <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
-                </div>
-            </div>
-
-        </div>
-    </div>
-
-    <div class="advantages">
-        <div class="container">
-            <h2 class="title">НАШИ ПРЕИМУЩЕСТВА</h2>
-            <div class="advantages__wrapper">
-                <div class="advantages__item">
-                    <img src="icons/advantages/cup.png" alt="cup" class="advantages__icon">
-                    <div class="advantages__subtitle">
-                        Делимся опытом
-                    </div>
-                    <div class="advantages__descr">
-                        Наши сотрудники всегда готовы поделиться своим опытом,
-                        так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!
-                    </div>
-                </div>
-                <div class="advantages__item">
-                    <img src="icons/advantages/heart.png" alt="heart" class="advantages__icon">
-                    <div class="advantages__subtitle">
-                        Заботимся о здоровье
-                    </div>
-                    <div class="advantages__descr">
-                        Мы работаем для того,
-                        чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!
-                    </div>
-                </div>
-                <div class="advantages__item">
-                    <img src="icons/advantages/shoe.png" alt="shoe" class="advantages__icon">
-                    <div class="advantages__subtitle">
-                        Учим бегать
-                    </div>
-                    <div class="advantages__descr">
-                        Помогаем с обучением
-                        правильной технике бега!<br>
-                        Дружим с крупнейшей школой бега в России -
-                        <a href="#">I LOVE RUNNING.</a>
-                    </div>
+                    <a href="#"> ПЕРЕЙТИ В КАТАЛОГ</a>
                 </div>
             </div>
         </div>
