--- a/src/index.html
+++ b/src/index.html
@@ -113,7 +113,7 @@
             </div>
             <form id="consultation-form" class="feed-form" action="#">
                 <input name="name" required placeholder="Ваше имя" type="text">
-                <input name="phone" required placeholder="Ваш телефон" type="number">
+                <input name="phone" required placeholder="Ваш телефон">
                 <input name="email" required placeholder="Ваш E-mail" type="email">
                 <!-- <input type="submit" value="ЗАКАЗАТЬ КОНСУЛЬТАЦИЮ"> -->
                 <button class="button button_submit">заказать консультацию</button>
@@ -528,7 +528,7 @@
             <div class="modal__descr">и мы перезвоним вам в течении 10 минут</div>
             <form class="feed-form feed-form_mt25 action=" #">
                 <input name="name" required placeholder="Ваше имя" type="text">
-                <input name="phone" required placeholder="Ваш телефон" type="number">
+                <input name="phone" required placeholder="Ваш телефон">
                 <input name="email" required placeholder="Ваш E-mail" type="email">
                 <!-- <input type="submit" value="ЗАКАЗАТЬ КОНСУЛЬТАЦИЮ"> -->
                 <button class="button button_submit">заказать консультацию</button>
@@ -541,7 +541,7 @@
             <div class="modal__descr">Пульсометр Polar FT1</div>
             <form class="feed-form feed-form_mt25 action=" #">
                 <input name="name" placeholder="Ваше имя" type="text">
-                <input name="phone" placeholder="Ваш телефон" type="number">
+                <input name="phone" placeholder="Ваш телефон">
                 <input name="email" placeholder="Ваш E-mail" type="email">
                 <!-- <input type="submit" value="ЗАКАЗАТЬ КОНСУЛЬТАЦИЮ"> -->
                 <button class="button button_submit">Купить</button>
@@ -560,6 +560,7 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/jquery.validate.min.js"></script>
+    <script src="js/jquery.maskedinput.js"></script>
     <script src="js/script.js"></script>
 </body>
 
